# rest-full

./: Cargo.toml
src/: main.rs
src/controller/: routes.rs
src/models/: user.rs
src/test/: quick_dev.rs
