[package]
name = "rest-full"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.6.20"                                        # or { version = "0.6.20", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }


[dev-dependencies]
anyhow = "1.0.52"
httpc-test = "0.1.0"
